--- a/package.json
+++ b/package.json
@@ -1,22 +1,24 @@
 {
   "name": "simple-movie-api",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
+    "clean-css": "4.1.11",
+    "constantinople": "3.1.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dependencies": "0.0.1",
-    "express": "~4.16.1",
+    "express": "^4.16.4",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.6.4",
     "morgan": "~1.9.1",
-    "node-gyp": "^5.0.2",
-    "constantinople": "3.1.1",
-    "clean-css": "4.1.11"g
+    "uglify-js": "2.6.0"
   }
 }
