--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "test": "mocha --exit --recursive"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -13,6 +14,7 @@
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dependencies": "0.0.1",
+    "dev-dependencies": "^1.0.0",
     "express": "^4.16.4",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
@@ -20,5 +22,10 @@
     "mongoose": "^5.6.4",
     "morgan": "~1.9.1",
     "uglify-js": "2.6.0"
+  },
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
+    "mocha": "^6.1.4"
   }
 }
